# MMc

./: CMakeLists.txt  README.md  main.cpp  report.ipynb
mmc/: CMakeLists.txt  mmc.cpp  mmc.hpp
